--- a/Source/Tailwind.Traders.Web/ClientApp/src/styles/layout/_hero.scss
+++ b/Source/Tailwind.Traders.Web/ClientApp/src/styles/layout/_hero.scss
@@ -7,6 +7,33 @@
     svg {
         fill: $color-svg-tertiary;
     }
+    .mj-buttons {
+        position: absolute;
+        top: 20%;
+        left: 40%;
+        z-index: 1000;
+        p {
+            color: #fff;
+            font-size: 16px;
+            font-weight: 100;
+            margin-bottom: 50px;
+        }
+        a {
+            margin-left: 10px;
+            margin-top: 50px;
+            background: transparent;
+            color: #fff;
+            border: 1px solid #fff;
+            font-size: 18px;
+            text-decoration: none;
+            padding: 10px 30px;
+
+            &:hover {
+                background: #fff;
+                color: #555;
+            }
+        }
+    }
 
     &__banner {
         align-items: center;
@@ -57,7 +84,7 @@
         }
 
         @media (min-width: $mq-l) {
-            width: 22rem;
+            width: 36rem;
         }
 
         & svg:nth-child(1) {
