--- a/Source/Tailwind.Traders.Web/ClientApp/src/styles/pages/_list.scss
+++ b/Source/Tailwind.Traders.Web/ClientApp/src/styles/pages/_list.scss
@@ -19,7 +19,7 @@
     }
 
     &__panel {
-        background-color: $color-background-light;
+        // background-color: $color-background-light;
         top: -100vh;
         height: 100vh;
         left: 0;
