--- a/Source/Tailwind.Traders.Web/ClientApp/src/styles/layout/_hero.scss
+++ b/Source/Tailwind.Traders.Web/ClientApp/src/styles/layout/_hero.scss
@@ -2,7 +2,10 @@
 // This file contains all styles related to the hero component of the site/application.
 // -----------------------------------------------------------------------------
 .hero {
-    position: relative;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: auto;
 
     svg {
         fill: $color-svg-tertiary;
@@ -16,7 +19,7 @@
             color: #fff;
             font-size: 16px;
             font-weight: 100;
-            margin-bottom: 50px;
+            text-align: center;
         }
         a {
             margin-left: 10px;
